--- a/index.html
+++ b/index.html
@@ -393,11 +393,11 @@
 </div>
 
 
-<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
-<script type="text/javascript" src="js/scrolloverflow.js"></script>
-<script type="text/javascript" src="js/jquery.fullPage.js"></script>
-<script type="text/javascript" src="js/initFullPage.js"></script>
-<script type="text/javascript" src="js/fontawesome-all.js"></script>
+<script type="text/javascript" src="javascript/jquery-3.2.1.min.js"></script>
+<script type="text/javascript" src="javascript/scrolloverflow.js"></script>
+<script type="text/javascript" src="javascript/jquery.fullPage.js"></script>
+<script type="text/javascript" src="javascript/initFullPage.js"></script>
+<script type="text/javascript" src="javascript/fontawesome-all.js"></script>
 <!-- GA init -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-P8RKN9S"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
