--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                 <p>與老師學習，並且協助製作工具機熱平衡的人機介面</p>
                 <ul>
                   <p class="counting">工作內容</p>
-                  <li>頁面偏排修改</li>
+                  <li>頁面編排修改</li>
                   <li>將server端PHP全面更改為Node.js並撰寫API與資料庫互動</li>
                   <li>協助後續維護及修改</li>
                 </ul>
