--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
+<!-- Mirrored from wizardgreen.github.io/A-page-about-Greene/ by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 28 Jul 2020 16:00:32 GMT -->
+<!-- Added by HTTrack --><meta http-equiv="content-type" content="text/html;charset=utf-8" /><!-- /Added by HTTrack -->
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>My Personal Website</title>
+  <title>A page about greene</title>
   <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css">
   <link rel="stylesheet" type="text/css" href="stylesheets/jquery.fullpage.css">
   <link rel="stylesheet" type="text/css" href="stylesheets/main.css">
@@ -38,17 +41,17 @@
         <h1 class="title">A page about greene.</h1>
         <hr>
         <p class="des">
-          HELLO!
+          Hi there !
           <br/><br/>
-          這是我的個人履歷網站
+          Now you are watching my personal website ver 1.0,
           <br/><br/>
-          我建立這個網站，方便記錄一下自己
+          I build this website for giving people a great first impression.
           <br/><br/>
-          希望我能一步一步向網頁開發工程師邁進
+          But, the ultimate goal is make myself become a Front-End Developer !
           <br/><br/>
-          個人對開發看法:學東西從模仿開始
+          Okay, stop blablabla, hold tight and get ready for it...
         </p>
-        <button id="btnGoDown">開始瀏覽</button>
+        <button id="btnGoDown">Let's Begin</button>
       </div>
     </div>
   </div>
@@ -60,13 +63,13 @@
         <h2 class="title">about</h2>
         <hr>
         <p class="des">
-          嗨，我的名字叫張義堃
+          嗨，我的名字叫李乾 (ㄑ一ㄢˊ)
           <br/><br/>
-          英文名字則是 David，我努力成為一位稱職的前端工程師
+          英文名字則是 Greene，我努力成為一位稱職的前端工程師
           <br/><br/>
-          網頁的開發設計，讓我覺得非常有趣且有挑戰性
+          不論設計、前端、後端，各種技術與巧思總是令我著迷不己
           <br/><br/>
-          期望我自己可以學習得更完整，並且創作出更高品質的作品!
+          而且我更熱愛用這些所學寫出更精簡好讀的 Code，與夥伴們創作更高品質的作品 !
         </p>
       </div>
     </div>
@@ -78,49 +81,50 @@
       <div class="warp">
         <div class="col-3 detail">
           <div class="expCard translate">
-            <div class="date"><i class="fas fa-briefcase"></i> 2016 - 2018</div>
+            <div class="date"><i class="fas fa-briefcase"></i> 2009 - 2011</div>
             <div class="content">
-              <div class="employer">熱門音樂研究社</div>
+              <div class="employer">翎盛科技</div>
               <hr>
-              <div class="position">社員,副社長</div>
+              <div class="position">外包英文翻譯</div>
               <div class="des">
-                <p>大一剛進到陌生的環境，看到熱音社很有趣，所以就加入並且學打鼓玩了一兩年，過程中還有擔任社團副社長，體驗到了領導非常的不容易!</p>
+                <p>負責遊戲文本的校稿、後續活動與Patch的翻譯。</p>
                 <ul>
-                  <p class="counting">參與舉辦活動</p>
-                  <li></i> 聖誕趴(聖誕節交換禮物)</li>
-                  <li></i> Drum Battle(期末爵士鼓成發)</li>
-                  <li></i> 底躁音樂祭</li>
+                  <p class="counting">參與作品</p>
+                  <li></i> Dawn of war 2</li>
+                  <li></i> Dawn of war 2 : Chaos Rising</li>
+                  <li></i> Dawn of war 2 : Retribution</li>
+                  <li></i> Space Marine</li>
                 </ul>
               </div>
             </div>
           </div>
           <div class="expCard pianoClub">
-            <div class="date"><i class="fas fa-music"></i> 2018 - Now</div>
+            <div class="date"><i class="fas fa-music"></i> 2014 - 2015</div>
             <div class="content">
-              <div class="employer">喜歡極限運動</div>
+              <div class="employer">鋼琴研習社</div>
               <hr>
-              <div class="position">開始接觸到滑板文化</div>
+              <div class="position">社團行政、社長</div>
               <div class="des">
-                <p>也是誤打誤撞，跟著朋友一起去玩滑板，結果一玩就愛上了，喜歡那種刺激的感覺，也慢慢的接觸相關的文化。</p>
-                <p class="axk">拍影片跟剪輯小短片，紀錄滑板生活</p>
+                <p>原本搖搖欲墜的社團，在我與一批新血接手後，努力經營才得以重振旗鼓，隨後我當上了社長的職位，並舉辦多場跨社團或跨校性的表演活動。</p>
+                <ul>
+                  <p class="counting">舉辦活動</p>
+                  <li>兩次成果發表</li>
+                  <li>兩次跨社表演</li>
+                  <li>一次跨校成果發表</li>
+                  <li>文藝四興 - 六社聯合校慶表演</li>
+                </ul>
               </div>
             </div>
           </div>
           <div class="expCard shopping">
-            <div class="date"><i class="fas fa-shopping-cart"></i> 2019 - 2020</div>
+            <div class="date"><i class="fas fa-shopping-cart"></i> 2016 - Now</div>
             <div class="content">
-              <div class="employer">專題內容</div>
+              <div class="employer">蝦皮拍賣</div>
               <hr>
-              <div class="position">數位化畢業證書</div>
+              <div class="position">自行網拍</div>
               <div class="des">
-                <p>透過數位簽章技術與網頁開發結合區塊鏈達到發行數位畢業證書的目的</p>
-                <ul>
-                  <p class="counting">參與內容</p>
-                  <li></i> 網頁前後端</li>
-                  <li></i> 以太坊與網頁串接功能</li>
-                  <li></i> 撰寫智能合約</li>
-                  <li></i> 使用RSA加密演算法加解密資料</li>
-                </ul>
+                <p>經營在蝦皮上經營鋼化玻璃買賣，成為整個內同品牌中"讚"量最多的賣家。</p>
+                <p class="axk">蝦皮搜尋 axkddi </p>
               </div>
             </div>
           </div>
@@ -130,17 +134,23 @@
           <hr>
           <div class="tree">
             <div class="timeLine">
+              <div class="circle purple xl">
+                <span calss="year">2017</span>
+              </div>
+              <div class="circle yellow m">
+                <span calss="year">2016</span>
+              </div>
               <div class="circle green m">
-                <span calss="year">2020</span>
+                <span calss="year">2015</span>
               </div>
               <div class="circle hotPink xl">
-                <span calss="year">2019</span>
+                <span calss="year">2014</span>
               </div>
               <div class="circle orange l">
-                <span calss="year">2018</span>
+                <span calss="year">2012</span>
               </div>
               <div class="circle babyBlue m">
-                <span calss="year">2016</span>
+                <span calss="year">2009</span>
               </div>
               
               <div class="circle bg-1 s"></div>
@@ -158,19 +168,48 @@
           </div>
         </div>
         <div class="col-3 detail">
-          <div class="expCard technical">
-            <div class="date"><i class="fas fa-cubes"></i> 2020</div>
+          <div class="expCard government">
+            <div class="date"><i class="fas fa-building"></i> 2012 - 2014</div>
             <div class="content">
-              <div class="employer">工具機熱平衡人機介面</div>
+              <div class="employer">屏東縣政府</div>
               <hr>
-              <div class="position">產學學生</div>
+              <div class="position">約僱人員</div>
               <div class="des">
-                <p>與老師學習，並且協助製作工具機熱平衡的人機介面</p>
+                <p>大學時期的暑假曾數次在屏東縣政府的資訊管理課當任約僱人員，主要是與協助外包的駐點工程師處理各類電腦、網頁問題。</p>
+              </div>
+            </div>
+          </div>
+          <div class="expCard campaign">
+            <div class="date"><i class="fab fa-font-awesome-flag"></i> 2015 - 2016</div>
+            <div class="content">
+              <div class="employer">立委競選團隊</div>
+              <hr>
+              <div class="position">活動助理</div>
+              <div class="des">
+                <p>團隊策畫與實施超過數百場選戰活動，最後推翻了屏東市區多年來的局面。</p>
+                <ul>
+                  <p class="counting">活動類型</p>
+                  <li>區域掃街</li>
+                  <li>造勢晚會</li>
+                  <li>講壇會</li>
+                  <li>總統候選人親臨的大型車隊掃街</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="expCard technical">
+            <div class="date"><i class="fas fa-cubes"></i> 2017</div>
+            <div class="content">
+              <div class="employer">旭東環保</div>
+              <hr>
+              <div class="position">技術人員</div>
+              <div class="des">
+                <p>透過射出機將環保材料製成大型浮板、管線防護套等等能源運輸用的組件。</p>
                 <ul>
                   <p class="counting">工作內容</p>
-                  <li>頁面編排修改</li>
-                  <li>將server端PHP全面更改為Node.js並撰寫API與資料庫互動</li>
-                  <li>協助後續維護及修改</li>
+                  <li>品質管理</li>
+                  <li>機台故障排除</li>
+                  <li>管理外籍勞工</li>
                 </ul>
               </div>
             </div>
@@ -393,11 +432,11 @@
 </div>
 
 
-<script type="text/javascript" src="javascript/jquery-3.2.1.min.js"></script>
-<script type="text/javascript" src="javascript/scrolloverflow.js"></script>
-<script type="text/javascript" src="javascript/jquery.fullPage.js"></script>
-<script type="text/javascript" src="javascript/initFullPage.js"></script>
-<script type="text/javascript" src="javascript/fontawesome-all.js"></script>
+<script type="text/javascript" src="js/jquery-3.2.1.min.js"></script>
+<script type="text/javascript" src="js/scrolloverflow.js"></script>
+<script type="text/javascript" src="js/jquery.fullPage.js"></script>
+<script type="text/javascript" src="js/initFullPage.js"></script>
+<script type="text/javascript" src="js/fontawesome-all.js"></script>
 <!-- GA init -->
 <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-P8RKN9S"
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
