--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <title>A page about greene</title>
-  <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css">
-  <link rel="stylesheet" type="text/css" href="stylesheets/jquery.fullpage.css">
-  <link rel="stylesheet" type="text/css" href="stylesheets/main.css">
-  <link rel="stylesheet" type="text/css" href="stylesheets/fa-svg-with-js.css">
-  <link rel="icon" href="assets/ic_settings_ethernet_black_24dp_1x.png">
+  <title>Welcome To My Website.</title>
+  <link rel="stylesheet" type="text/css" href="css/normalize.css">
+  <link rel="stylesheet" type="text/css" href="css/jquery.fullpage.css">
+  <link rel="stylesheet" type="text/css" href="css/main.css">
+  <link rel="stylesheet" type="text/css" href="css/fa-svg-with-js.css">
+  <link rel="icon" href="img/eye.png">
 
   <!-- GA init -->
-  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src='../../www.googletagmanager.com/gtm5445.html?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer','GTM-P8RKN9S');</script>
+  <!-- <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src='../../www.googletagmanager.com/gtm5445.html?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer','GTM-P8RKN9S');</script> -->
 </head>
 <body>
 
@@ -38,20 +38,20 @@
   <div class="section cover">
     <div class="container">
       <div class="wordCard">
-        <h1 class="title">A page about greene.</h1>
+        <h1 class="title">Welcome To My Website.</h1>
         <hr>
         <p class="des">
-          Hi there !
+          HELLO!
           <br/><br/>
-          Now you are watching my personal website ver 1.0,
+          這是我的個人履歷網站
           <br/><br/>
-          I build this website for giving people a great first impression.
+          我建立這個網站，方便記錄一下自己
           <br/><br/>
-          But, the ultimate goal is make myself become a Front-End Developer !
+          希望我能一步一步向網頁開發工程師邁進
           <br/><br/>
-          Okay, stop blablabla, hold tight and get ready for it...
+          個人對開發看法:學東西從模仿開始
         </p>
-        <button id="btnGoDown">Let's Begin</button>
+        <button id="btnGoDown">開始瀏覽</button>
       </div>
     </div>
   </div>
@@ -63,13 +63,13 @@
         <h2 class="title">about</h2>
         <hr>
         <p class="des">
-          嗨，我的名字叫李乾 (ㄑ一ㄢˊ)
+          嗨，我的名字叫張義堃
           <br/><br/>
-          英文名字則是 Greene，我努力成為一位稱職的前端工程師
+          英文名字則是 David，我努力成為一位稱職的前端工程師
           <br/><br/>
-          不論設計、前端、後端，各種技術與巧思總是令我著迷不己
+          網頁的開發設計，讓我覺得非常有趣且有挑戰性
           <br/><br/>
-          而且我更熱愛用這些所學寫出更精簡好讀的 Code，與夥伴們創作更高品質的作品 !
+          期望我自己可以學習得更完整，並且創作出更高品質的作品!
         </p>
       </div>
     </div>
@@ -81,50 +81,37 @@
       <div class="warp">
         <div class="col-3 detail">
           <div class="expCard translate">
-            <div class="date"><i class="fas fa-briefcase"></i> 2009 - 2011</div>
+            <div class="date"><i class="fas fa-briefcase"></i> 2016 - 2018</div>
             <div class="content">
-              <div class="employer">翎盛科技</div>
+              <div class="employer">熱門音樂研究社</div>
               <hr>
-              <div class="position">外包英文翻譯</div>
+              <div class="position">社員,副社長</div>
               <div class="des">
-                <p>負責遊戲文本的校稿、後續活動與Patch的翻譯。</p>
+                <p>大一剛進到陌生的環境，看到熱音社很有趣，所以就加入並且學打鼓玩了一兩年，過程中還有擔任社團副社長，體驗到了領導非常的不容易!</p>
                 <ul>
-                  <p class="counting">參與作品</p>
-                  <li></i> Dawn of war 2</li>
-                  <li></i> Dawn of war 2 : Chaos Rising</li>
-                  <li></i> Dawn of war 2 : Retribution</li>
-                  <li></i> Space Marine</li>
+                  <p class="counting">參與舉辦活動</p>
+                  <li></i> 聖誕趴(聖誕節交換禮物)</li>
+                  <li></i> Drum Battle(期末爵士鼓成發)</li>
+                  <li></i> 底躁音樂祭</li>
                 </ul>
               </div>
             </div>
           </div>
           <div class="expCard pianoClub">
-            <div class="date"><i class="fas fa-music"></i> 2014 - 2015</div>
+            <div class="date"><i class="fas fa-shopping-cart"></i> 2019 - 2020</div>
             <div class="content">
-              <div class="employer">鋼琴研習社</div>
+              <div class="employer">專題內容</div>
               <hr>
-              <div class="position">社團行政、社長</div>
+              <div class="position">數位化畢業證書</div>
               <div class="des">
-                <p>原本搖搖欲墜的社團，在我與一批新血接手後，努力經營才得以重振旗鼓，隨後我當上了社長的職位，並舉辦多場跨社團或跨校性的表演活動。</p>
+                <p>透過數位簽章技術與網頁開發結合區塊鏈達到發行數位畢業證書的目的</p>
                 <ul>
-                  <p class="counting">舉辦活動</p>
-                  <li>兩次成果發表</li>
-                  <li>兩次跨社表演</li>
-                  <li>一次跨校成果發表</li>
-                  <li>文藝四興 - 六社聯合校慶表演</li>
+                  <p class="counting">參與內容</p>
+                  <li></i> 網頁前後端</li>
+                  <li></i> 以太坊與網頁串接功能</li>
+                  <li></i> 撰寫智能合約</li>
+                  <li></i> 使用RSA加密演算法加解密資料</li>
                 </ul>
-              </div>
-            </div>
-          </div>
-          <div class="expCard shopping">
-            <div class="date"><i class="fas fa-shopping-cart"></i> 2016 - Now</div>
-            <div class="content">
-              <div class="employer">蝦皮拍賣</div>
-              <hr>
-              <div class="position">自行網拍</div>
-              <div class="des">
-                <p>經營在蝦皮上經營鋼化玻璃買賣，成為整個內同品牌中"讚"量最多的賣家。</p>
-                <p class="axk">蝦皮搜尋 axkddi </p>
               </div>
             </div>
           </div>
@@ -134,23 +121,17 @@
           <hr>
           <div class="tree">
             <div class="timeLine">
-              <div class="circle purple xl">
-                <span calss="year">2017</span>
-              </div>
-              <div class="circle yellow m">
-                <span calss="year">2016</span>
-              </div>
               <div class="circle green m">
-                <span calss="year">2015</span>
+                <span calss="year">2020</span>
               </div>
               <div class="circle hotPink xl">
-                <span calss="year">2014</span>
+                <span calss="year">2019</span>
               </div>
               <div class="circle orange l">
-                <span calss="year">2012</span>
+                <span calss="year">2018</span>
               </div>
               <div class="circle babyBlue m">
-                <span calss="year">2009</span>
+                <span calss="year">2016</span>
               </div>
               
               <div class="circle bg-1 s"></div>
@@ -169,47 +150,30 @@
         </div>
         <div class="col-3 detail">
           <div class="expCard government">
-            <div class="date"><i class="fas fa-building"></i> 2012 - 2014</div>
+            <div class="date"><i class="fas fa-music"></i> 2018 - Now</div>
             <div class="content">
-              <div class="employer">屏東縣政府</div>
+              <div class="employer">喜歡極限運動</div>
               <hr>
-              <div class="position">約僱人員</div>
+              <div class="position">開始接觸到滑板文化</div>
               <div class="des">
-                <p>大學時期的暑假曾數次在屏東縣政府的資訊管理課當任約僱人員，主要是與協助外包的駐點工程師處理各類電腦、網頁問題。</p>
+                <p>也是誤打誤撞，跟著朋友一起去玩滑板，結果一玩就愛上了，喜歡那種刺激的感覺，也慢慢的接觸相關的文化。</p>
+                <p class="axk">拍影片跟剪輯小短片，紀錄滑板生活</p>
               </div>
             </div>
           </div>
           <div class="expCard campaign">
-            <div class="date"><i class="fab fa-font-awesome-flag"></i> 2015 - 2016</div>
+            <div class="date"><i class="fab fa-font-awesome-flag"></i> 2020</div>
             <div class="content">
-              <div class="employer">立委競選團隊</div>
+              <div class="employer">工具機熱平衡人機介面</div>
               <hr>
-              <div class="position">活動助理</div>
+              <div class="position">產學學生</div>
               <div class="des">
-                <p>團隊策畫與實施超過數百場選戰活動，最後推翻了屏東市區多年來的局面。</p>
-                <ul>
-                  <p class="counting">活動類型</p>
-                  <li>區域掃街</li>
-                  <li>造勢晚會</li>
-                  <li>講壇會</li>
-                  <li>總統候選人親臨的大型車隊掃街</li>
-                </ul>
-              </div>
-            </div>
-          </div>
-          <div class="expCard technical">
-            <div class="date"><i class="fas fa-cubes"></i> 2017</div>
-            <div class="content">
-              <div class="employer">旭東環保</div>
-              <hr>
-              <div class="position">技術人員</div>
-              <div class="des">
-                <p>透過射出機將環保材料製成大型浮板、管線防護套等等能源運輸用的組件。</p>
+                <p>與老師學習，並且協助製作工具機熱平衡的人機介面</p>
                 <ul>
                   <p class="counting">工作內容</p>
-                  <li>品質管理</li>
-                  <li>機台故障排除</li>
-                  <li>管理外籍勞工</li>
+                  <li>頁面編排修改</li>
+                  <li>將server端PHP全面更改為Node.js並撰寫API與資料庫互動</li>
+                  <li>協助後續維護及修改</li>
                 </ul>
               </div>
             </div>
@@ -230,9 +194,8 @@
             <i class="icon html5 fab fa-html5"></i>
             <p class="skillName">HTML</p>
             <ul class="des">
-              <li><i class="fas fa-check-square"></i>善用語意化的命名結構</li>
+              <li><i class="fas fa-check-square"></i>善用標籤</li>
               <li><i class="fas fa-check-square"></i>Bootstrap 4</li>
-              <li><i class="fas fa-check-square"></i>Material Design Lite</li>
             </ul>
           </div>
         </div>
@@ -243,8 +206,8 @@
             <p class="skillName">CSS</p>
             <ul class="des">
               <li><i class="fas fa-check-square"></i>CSS 3</li>
-              <li><i class="fas fa-check-square"></i>Flex / Grid</li>
-              <li><i class="fas fa-check-square"></i>SCSS / Less</li>
+              <li><i class="fas fa-check-square"></i>Flex / Grid(學習中)</li>
+              <li><i class="fas fa-check-square"></i>SCSS(學習中)</li>
             </ul>
           </div>
         </div>
@@ -254,10 +217,9 @@
             <i class="icon github fab fa-github"></i>
             <p class="skillName">Git</p>
             <ul class="des">
-              <li>大家都愛Git</li>
-              <li>你一定也很喜歡吧 !</li>
-              <li><i class="fas fa-check-square"></i>Tig</li>
-              <li><i class="fas fa-check-square"></i>Babun / Fish</li>
+              <li>工程師標準技能</li>
+              <li><i class="fas fa-check-square"></i>Pages</li>
+              <li><i class="fas fa-check-square"></i>Git(學習中)</li>
             </ul>
           </div>
         </div>
@@ -270,7 +232,6 @@
               <li><i class="fas fa-check-square"></i>ES6</li>
               <li><i class="fas fa-check-square"></i>AJAX / JSON</li>
               <li><i class="fas fa-check-square"></i>政府 Open Data</li>
-              <li><i class="fas fa-check-square"></i>Google Map API</li>
               <li><i class="fas fa-check-square"></i>善用第三方插件</li>
             </ul>
           </div>
@@ -279,12 +240,9 @@
           <div class="square">
             <div class="cap"></div>
             <i class="icon vue fab fa-vuejs"></i>
-            <p class="skillName">Vue.js</p>
+            <p class="skillName">Vue.js(未來目標)</p>
             <ul class="des">
-              <li><i class="fas fa-check-square"></i>Vue-CLI</li>
-              <li><i class="fas fa-check-square"></i>Vue-Router</li>
-              <li><i class="fas fa-check-square"></i>Vuex</li>
-              <li><i class="fas fa-check-square"></i>Vue.Apollo</li>
+              <li><i class="fas fa-check-square"></i>Vue-CLI(全力學習中)</li>
             </ul>
           </div>
         </div>
@@ -296,8 +254,6 @@
             <ul class="des">
               <li><i class="fas fa-check-square"></i>NPM</li>
               <li><i class="fas fa-check-square"></i>Express</li>
-              <li><i class="fas fa-check-square"></i>EJS</li>
-              <li>正在學習中...</li>
             </ul>
           </div>
         </div>
@@ -307,12 +263,9 @@
             <i class="icon other fas fa-list"></i>
             <p class="skillName">Other</p>
             <ul class="des">
-              <li><i class="fas fa-check-square"></i>Gulp</li>
-              <li><i class="fas fa-check-square"></i>Webpack</li>
               <li><i class="fas fa-check-square"></i>Trello</li>
-              <li><i class="fas fa-check-square"></i>Scrum</li>
-              <li><i class="fas fa-check-square"></i>Firebase</li>
-              <li><i class="fas fa-check-square"></i>英文 - 中等對話 / 讀寫</li>
+              <li><i class="fas fa-check-square"></i>MariaDB</li>
+              <li><i class="fas fa-check-square"></i>英文 - 初階對話 / 讀寫</li>
             </ul>
           </div>
         </div>
@@ -322,9 +275,9 @@
 
   <div class="section works">
     <div class="container clearfix">
-      <h2 class="title">works</h2>
+      <h2 class="title">works(全力產出中)</h2>
       <hr>
-      <div class="col-4 col-6-m col-12-mobile">
+      <!-- <div class="col-4 col-6-m col-12-mobile">
         <a href="assets/works/BMI/index.html" target="_blank">
           <div class="square BMI">
             <div class="cap"></div>
@@ -348,8 +301,8 @@
           </div>
         <p class="name">高雄市旅遊資訊</p>
         </a>
-      </div>
-      <div class="col-4 col-6-m col-12-mobile">
+      </div> -->
+      <!-- <div class="col-4 col-6-m col-12-mobile">
         <a href="assets/works/Shopping/index.html" target="_blank">
           <div class="square jsList">
             <div class="cap"></div>
@@ -401,7 +354,7 @@
           </div>
           <p class="name">Vue-TodoList</p>
         </a>
-      </div>
+      </div> -->
     </div>
   </div>
 
@@ -411,15 +364,15 @@
         <h2 class="title">contact</h2>
         <hr>
         <div class="avater"></div>
-        <h2 class="name">李乾 ( Greene )</h2>
+        <h2 class="name">張義堃(David)</h2>
         <ul class="socialMedia clearfix">
-          <li calss="faceBook"><a href="https://www.facebook.com/chien.lee.319" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
-          <li calss="linkedIn"><a href="https://www.linkedin.com/in/22232314a" target="_blank"><i class="fab fa-linkedin"></i></a></li>
-          <li calss="gitHub"><a href="https://github.com/Wizardgreen" target="_blank"><i class="fab fa-github-square"></i></a></li>
+          <li calss="faceBook"><a href="https://www.facebook.com/profile.php?id=100002529064006" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
+          <li calss="instagram"><a href="https://www.instagram.com/funfunto_sk8/?hl=zh-tw" target="_blank"><i class="fab fa-instagram"></i></a></li>
+          <li calss="gitHub"><a href="https://github.com/funfunto" target="_blank"><i class="fab fa-github-square"></i></a></li>
         </ul>
         <div class="mail">
-          <a  href="mailto:t0937383@gmail.com">
-            <i class="fas fa-envelope"></i> t0937383@gmail.com
+          <a  href="mailto:a19970922@gmail.com">
+            <i class="fas fa-envelope"></i> a19970922@gmail.com
           </a>
         </div>
       </div>
@@ -427,7 +380,7 @@
   </div>
 
   <div class="section fp-auto-height footer">
-    <p class="copyRight">Copyright © Greene All rights reserved.</p>
+    <p class="copyRight">funfunto © David All rights reserved.</p>
   </div>
 </div>
 
